--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,27 @@
-h1{
-    color:seagreen
-    
+body {
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
-body{
-    background-color: burlywood;
+
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    monospace;
 }
+.my-class
+{
+  background-color: rgb(213, 222, 135);
+}
+
+.my-true-div{
+ 
+  background-color: rgb(255, 0, 179);
+}
+.my-false-div{
+ 
+  background-color: rgb(0, 255, 0);
+}
+
