--- a/third-app/src/index.css
+++ b/third-app/src/index.css
@@ -1,27 +1,24 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: aqua;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
-.my-class
-{
+.my-class {
   background-color: rgb(213, 222, 135);
 }
 
-.my-true-div{
- 
+.my-true-div {
   background-color: rgb(255, 0, 179);
 }
-.my-false-div{
- 
+.my-false-div {
   background-color: rgb(0, 255, 0);
 }
-
